# mc-wind-shader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  beet-release.json  beet-release.yml  beet.json  beet.yml  pyproject.toml  tasks.py  tbump.toml
.github/workflows/: release.yml
resourcepack/assets/minecraft/shaders/core/: rendertype_cutout_mipped.json  rendertype_cutout_mipped.vsh  rendertype_translucent.vsh
tools/: main.py
windshader/: build.py  utils.py
windshader/plugins/: texture_uvs.py
