[tool.poetry]
name = "mc-wind-shader"
version = "1.5.0"
description = "Wind shader for Minecraft"
authors = ["Oran9eUtan"]

[tool.poetry.dependencies]
python = "^3.9"
beet = "^0.32.0"

[tool.poetry.dev-dependencies]
typer = "^0.3.2"
pre-commit = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
invoke = "^1.5.0"
python-semantic-release = "^7.15.4"
opencv-contrib-python = "^4.5.2"
prettytable = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95

[tool.isort]
profile = "black"
line_length = 95

[tool.semantic_release]
branch="release"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = "beet-release.yml:(\\d+\\.\\d+\\.\\d+)"
major_on_zero = false
build_command = "python -m windshader.build beet-release.yml"
dist_path = "dist"
upload_to_pypi = false
upload_to_release = true